# ray-tracing-in-cuda

./: .gitignore  README.md
cmake-cpu-version/: CMakeLists.txt  hittable.h  main.cpp  material.h  rtweekend.h  sphere.h  texture.hpp
cpu-version/: ParalleCompute.sln  README.md
cpu-version/basic_cpu_version/: basic_cpu_version.vcxproj  camera.h  color.h  hittable.h  hittable_list.h  vec3.h
cpu-version/cpu-version/: camera.h  cpu-version.vcxproj  hittable.h  hittable_list.h  main.cpp  ray.h  rtweekend.h  sphere.h  vec3.h
gpu-version/: CMakeLists.txt  aabb.hpp  basic_scene.json  blue.json  blue.py  blue.sh  blue2.json  blue2.py  camera.cuh  color.cuh  dna.py  hittable.cuh  hittable_list.cuh  main.cu  material.cuh  object.cuh  parser.cu  parser.hpp  ray.cuh  rtweekend.cuh  sample_scene.json  scene.json  sphere.cuh  texture.cuh  vcpkg.json  vec3.cuh
taichi-version/: bvh.py  hittable.py  main.py  material.py  vector.py
taichi-version/asset/points/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+261 more)
朴素光线追踪/: 4_0_path_tracing.py  ray_tracing_models.py
